--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -25,7 +25,7 @@
   <div class="typing-area">
     <form action="#" class="typing-form">
       <div class="input-wrapper">
-        <input type="text" placeholder="Let's grow some plants !" class="typing-input" required />
+        <input type="text" placeholder="Let's grow some plants ! ..." class="typing-input" required />
         <button id="send-message-button" class="icon material-symbols-rounded">send</button>
       </div>
       <div class="action-buttons">
