--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <!-- Linking Google Fonts For Icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="./assets/style.css">
+  <link rel="icon" href="./assets/images/favicon.ico" sizes="32x32" />
+  <link rel="icon" href="./assets/images/favicon.ico" sizes="192x192" />
+  <link rel="apple-touch-icon" href="./assets/images/favicon.ico" />
+
 </head>
 <body>
   <header class="header">
